--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </section> <!--mesto-->
   </main>
   
-  <div class="popup popup_opened" id="popup">
+  <div class="popup" id="popup"> <!--class="popup popup_opened"-->
     <div class="popup__container">
       <div class="popup__content">
         <a class="popup__button-close" href="#" >
