--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section> <!--mesto-->
   </main>
   
-  <div class="popup" id="popup">
+  <div class="popup" id="popup"> <!--JS: popup_opened-->
     <div class="popup__container">
       <button class="popup__button-close" type="button"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
@@ -92,7 +92,7 @@
   </div> <!--popup-->
 
   <footer class="footer">
-    <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
+    <p class="footer__copyright">&#169; 2021 Mesto Russia</p>
   </footer> <!--footer-->
   
 </body>
