--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <button class="profile__add-button" type="button"></button>
     </section> <!--profile-->
 
-    <section class="mesto">
+    <div class="mesto">
       <ul class="elements"></ul> <!--elements-->
-    </section> <!--mesto-->
+    </div> <!--mesto-->
   </main>
 
   <footer class="footer">
@@ -80,6 +80,6 @@
     </li>
   </template> <!--elementTemplate-->
 
-  <script type="text/javascript" src="./script/script.js" defer></script>  
+  <script src="./script/script.js" defer></script>  
 </body>
 </html>
