--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <main>    
     <section class="profile">
-      <img class="profile__avatar" src="./images/image.jpg" alt="Аватар">
+      <img class="profile__avatar" src="./images/image.jpg" alt="Аватар профиля">
       <div class="profile__profile-info">
         <div class="profile__text">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -62,7 +62,7 @@
   <div class="popup popup_place-image" id="popup-image">
     <div class="popup__container-image">
       <figure class="popup__figure">
-        <img class="popup__image" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="">
+        <img class="popup__image" src="#" alt="">
         <figcaption class="popup__image-caption"></figcaption>
       </figure>
       <button class="popup__button-close" type="button" id="popup-image-close"></button>
