--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
 
   <header class="header">
-    <img class="header__logo" src="./images/logo.svg" alt="Mesto-Russia">
+    <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Mesto-Russia">
   </header> <!--header-->
   
   <main>    
     <section class="profile">
-      <img class="profile__avatar" src="./images/image.jpg" alt="Аватар профиля">
+      <img class="profile__avatar" src="<%=require('./images/custo.jpg')%>" alt="Аватар профиля">
       <div class="profile__profile-info">
         <div class="profile__text">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -80,6 +79,6 @@
     </li>
   </template> <!--elementTemplate-->
 
-  <script src="./script/script.js" defer></script>  
+  <!-- <script src="./script/script.js" defer></script> -->
 </body>
 </html>
