--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
   <main>    
     <section class="profile">
       <img class="profile__avatar" src="<%=require('./images/custo.jpg')%>" alt="Аватар профиля">
-      <div class="profile__profile-info">
+      <div class="profile__info">
         <div class="profile__text">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <p class="profile__subtitle">Исследователь океана</p>
         </div> <!--profile__text-->
         <button class="profile__edit-button" type="button"></button>
-      </div> <!--profile__profile-info-->
+      </div> <!--profile__info-->
       <button class="profile__add-button" type="button"></button>
     </section> <!--profile-->
 
