--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,11 @@
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form" name="popup__form-profile" action="#" id="popup__form-profile" novalidate>
         <div class="popup__input-container">
-          <input class="popup__input" type="text" name="profileName" id="profileName" value="Жак-Ив Кусто" autocomplete="off" required minlength="2" maxlength="40">
+          <input class="popup__input" type="text" name="profileName" id="profileName" placeholder="Имя" value="Жак-Ив Кусто" autocomplete="off" required minlength="2" maxlength="40">
           <span class="popup__input-error profileName-error"></span>
         </div>
         <div class="popup__input-container">
-          <input class="popup__input" type="text" name="profileAboutSelf" id="profileAboutSelf" value="Исследователь океана" autocomplete="off" required minlength="2" maxlength="200">
+          <input class="popup__input" type="text" name="profileAboutSelf" id="profileAboutSelf" placeholder="О себе" value="Исследователь океана" autocomplete="off" required minlength="2" maxlength="200">
           <span class="popup__input-error profileAboutSelf-error"></span>
         </div>
         <button class="popup__button-save" type="submit">Сохранить</button>
@@ -62,7 +62,7 @@
           <span class="popup__input-error placeName-error"></span>
         </div>
         <div class="popup__input-container">
-          <input class="popup__input" type="url" name="placeUrl" id="placeUrl" placeholder="Введите адрес сайта" autocomplete="off" required>
+          <input class="popup__input" type="url" name="placeUrl" id="placeUrl" placeholder="Ссылка на картинку" autocomplete="off" required>
           <span class="popup__input-error placeUrl-error"></span>
         </div>
         <button class="popup__button-save" type="submit">Создать</button>
