--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,10 @@
       <img class="element__image" src="#" alt="">
       <div class="element__text">
         <h2 class="element__title"></h2>
-        <button class="element__like" type="button"></button>
+        <div class="element__like-container">
+          <button class="element__like" type="button"></button>
+          <p class="element__like-value">0</p>
+        </div>
       </div>
     </li>
   </template> <!--elementTemplate-->
