--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           <input class="popup__input" type="text" name="profileAboutSelf" id="profileAboutSelf" placeholder="О себе" value="Исследователь океана" autocomplete="off" required minlength="2" maxlength="200">
           <span class="popup__input-error profileAboutSelf-error"></span>
         </div>
-        <button class="popup__button-save" type="submit">Сохранить</button>
+        <button class="popup__button-save" type="submit" id="profileSubmitButton">Сохранить</button>
       </form>
     </div>
   </div> <!--popup-profile-->
@@ -68,7 +68,7 @@
           <input class="popup__input" type="url" name="placeUrl" id="placeUrl" placeholder="Ссылка на картинку" autocomplete="off" required>
           <span class="popup__input-error placeUrl-error"></span>
         </div>
-        <button class="popup__button-save" type="submit">Создать</button>
+        <button class="popup__button-save" type="submit" id="placeSubmitButton">Создать</button>
       </form>
     </div>
   </div> <!--popup-place-->
@@ -92,7 +92,7 @@
           <input class="popup__input" type="url" name="avatarUrl" id="avatarUrl" placeholder="Ссылка на картинку" autocomplete="off" required>
           <span class="popup__input-error avatarUrl-error"></span>
         </div>
-        <button class="popup__button-save" type="submit">Сохранить</button>
+        <button class="popup__button-save" type="submit" id="avatarSubmitButton">Сохранить</button>
       </form>
     </div>
   </div> <!--popup-avatar-->
