--- a/src/index.html
+++ b/src/index.html
@@ -1,114 +1,151 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mesto</title>
-</head>
-<body class="page">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mesto</title>
+  </head>
+  <body class="page page_disabled">
+    <!-- header -->
+    <header class="header">
+      <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Mesto-Russia" />
+    </header>
 
-  <header class="header">
-    <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Mesto-Russia">
-  </header> <!--header-->
+    <main>
+      <!-- profile -->
+      <section class="profile">
+        <div class="profile__avatar-container">
+          <img class="profile__avatar" src="<%=require('./images/custo.jpg')%>" alt="Аватар профиля" />
+          <div class="profile__avatar-edit"></div>
+        </div>
+        <div class="profile__info">
+          <div class="profile__text">
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <p class="profile__subtitle">Исследователь океана</p>
+          </div>
+          <button class="profile__edit-button" type="button"></button>
+        </div>
+        <button class="profile__add-button" type="button"></button>
+      </section>
 
-  <main>
-    <section class="profile">
-      <div class="profile__avatar-container">
-        <img class="profile__avatar" src="<%=require('./images/custo.jpg')%>" alt="Аватар профиля">
-        <div class="profile__avatar-edit"></div>
+      <!-- place -->
+      <div class="place">
+        <ul class="elements"></ul>
       </div>
-      <div class="profile__info">
-        <div class="profile__text">
-          <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <p class="profile__subtitle">Исследователь океана</p>
-        </div> <!--profile__text-->
-        <button class="profile__edit-button" type="button"></button>
-      </div> <!--profile__info-->
-      <button class="profile__add-button" type="button"></button>
-    </section> <!--profile-->
+    </main>
 
-    <div class="place">
-      <ul class="elements"></ul> <!--elements-->
-    </div> <!--place-->
-  </main>
+    <!-- footer -->
+    <footer class="footer">
+      <p class="footer__copyright">&#169; 2023 Mesto Russia</p>
+    </footer>
 
-  <footer class="footer">
-    <p class="footer__copyright">&#169; 2022 Mesto Russia</p>
-  </footer> <!--footer-->
-
-  <div class="popup" id="popup-profile">
-    <div class="popup__container">
-      <button class="popup__button-close" type="button"></button>
-      <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="popup__form-profile" action="#" id="popup__form-profile" novalidate>
-        <div class="popup__input-container">
-          <input class="popup__input" type="text" name="profileName" id="profileName" placeholder="Имя" value="Жак-Ив Кусто" autocomplete="off" required minlength="2" maxlength="40">
-          <span class="popup__input-error profileName-error"></span>
-        </div>
-        <div class="popup__input-container">
-          <input class="popup__input" type="text" name="profileAboutSelf" id="profileAboutSelf" placeholder="О себе" value="Исследователь океана" autocomplete="off" required minlength="2" maxlength="200">
-          <span class="popup__input-error profileAboutSelf-error"></span>
-        </div>
-        <button class="popup__button-save" type="submit" id="profileSubmitButton">Сохранить</button>
-      </form>
-    </div>
-  </div> <!--popup-profile-->
-
-  <div class="popup" id="popup-place">
-    <div class="popup__container">
-      <button class="popup__button-close" type="button"></button>
-      <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="popup__form-place" action="#" id="popup__form-place" novalidate>
-        <div class="popup__input-container">
-          <input class="popup__input" type="text" name="placeName" id="placeName" placeholder="Название" autocomplete="off" required minlength="2" maxlength="30">
-          <span class="popup__input-error placeName-error"></span>
-        </div>
-        <div class="popup__input-container">
-          <input class="popup__input" type="url" name="placeUrl" id="placeUrl" placeholder="Ссылка на картинку" autocomplete="off" required>
-          <span class="popup__input-error placeUrl-error"></span>
-        </div>
-        <button class="popup__button-save" type="submit" id="placeSubmitButton">Создать</button>
-      </form>
-    </div>
-  </div> <!--popup-place-->
-
-  <div class="popup popup_place-image" id="popup-image">
-    <div class="popup__container-image">
-      <figure class="popup__figure">
-        <img class="popup__image" src="#" alt="">
-        <figcaption class="popup__image-caption"></figcaption>
-      </figure>
-      <button class="popup__button-close" type="button"></button>
-    </div>
-  </div> <!--popup-image-->
-
-  <div class="popup" id="popup-avatar">
-    <div class="popup__container">
-      <button class="popup__button-close" type="button"></button>
-      <h3 class="popup__title">Обновить аватар</h3>
-      <form class="popup__form" name="popup__form-avatar" action="#" id="popup__form-avatar" novalidate>
-        <div class="popup__input-container">
-          <input class="popup__input" type="url" name="avatarUrl" id="avatarUrl" placeholder="Ссылка на картинку" autocomplete="off" required>
-          <span class="popup__input-error avatarUrl-error"></span>
-        </div>
-        <button class="popup__button-save" type="submit" id="avatarSubmitButton">Сохранить</button>
-      </form>
-    </div>
-  </div> <!--popup-avatar-->
-
-  <template id="elementTemplate">
-    <li class="element">
-      <button class="element__delete-button"></button>
-      <img class="element__image" src="#" alt="">
-      <div class="element__text">
-        <h2 class="element__title"></h2>
-        <div class="element__like-container">
-          <button class="element__like" type="button"></button>
-          <p class="element__like-value">0</p>
-        </div>
+    <!-- popup-profile -->
+    <div class="popup" id="popupProfile">
+      <div class="popup__container">
+        <button class="popup__button-close" type="button"></button>
+        <h3 class="popup__title">Редактировать профиль</h3>
+        <form class="popup__form" name="formProfile" action="#" novalidate>
+          <div class="popup__input-container">
+            <input
+              class="popup__input"
+              type="text"
+              name="profileName"
+              placeholder="Имя"
+              value="Жак-Ив Кусто"
+              autocomplete="off"
+              required
+              minlength="2"
+              maxlength="40"
+            />
+            <span class="popup__input-error profileName-error"></span>
+          </div>
+          <div class="popup__input-container">
+            <input
+              class="popup__input"
+              type="text"
+              name="profileAboutSelf"
+              placeholder="О себе"
+              value="Исследователь океана"
+              autocomplete="off"
+              required
+              minlength="2"
+              maxlength="200"
+            />
+            <span class="popup__input-error profileAboutSelf-error"></span>
+          </div>
+          <button class="popup__button-save" type="submit" id="profileSubmitButton">Сохранить</button>
+        </form>
       </div>
-    </li>
-  </template> <!--elementTemplate-->
-</body>
+    </div>
+
+    <!-- popup-place -->
+    <div class="popup" id="popupPlace">
+      <div class="popup__container">
+        <button class="popup__button-close" type="button"></button>
+        <h3 class="popup__title">Новое место</h3>
+        <form class="popup__form" name="formPlace" action="#" novalidate>
+          <div class="popup__input-container">
+            <input
+              class="popup__input"
+              type="text"
+              name="placeName"
+              placeholder="Название"
+              autocomplete="off"
+              required
+              minlength="2"
+              maxlength="30"
+            />
+            <span class="popup__input-error placeName-error"></span>
+          </div>
+          <div class="popup__input-container">
+            <input class="popup__input" type="url" name="placeUrl" placeholder="Ссылка на картинку" autocomplete="off" required />
+            <span class="popup__input-error placeUrl-error"></span>
+          </div>
+          <button class="popup__button-save" type="submit" id="placeSubmitButton">Создать</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- /popup-image -->
+    <div class="popup popup_place-image" id="popupImage">
+      <div class="popup__container-image">
+        <figure class="popup__figure">
+          <img class="popup__image" src="#" alt="" />
+          <figcaption class="popup__image-caption"></figcaption>
+        </figure>
+        <button class="popup__button-close" type="button"></button>
+      </div>
+    </div>
+
+    <!-- popup-avatar -->
+    <div class="popup" id="popupAvatar">
+      <div class="popup__container">
+        <button class="popup__button-close" type="button"></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form class="popup__form" name="formAvatar" action="#" novalidate>
+          <div class="popup__input-container">
+            <input class="popup__input" type="url" name="avatarUrl" placeholder="Ссылка на картинку" autocomplete="off" required />
+            <span class="popup__input-error avatarUrl-error"></span>
+          </div>
+          <button class="popup__button-save" type="submit" id="avatarSubmitButton">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- elementTemplate -->
+    <template id="elementTemplate">
+      <li class="element">
+        <button class="element__delete-button"></button>
+        <img class="element__image" src="#" alt="" />
+        <div class="element__text">
+          <h2 class="element__title"></h2>
+          <div class="element__like-container">
+            <button class="element__like" type="button"></button>
+            <p class="element__like-value">0</p>
+          </div>
+        </div>
+      </li>
+    </template>
+  </body>
 </html>
