--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,13 @@
       <!-- profile -->
       <section class="profile">
         <div class="profile__avatar-container">
-          <img class="profile__avatar" src="<%=require('./images/custo.jpg')%>" alt="Аватар профиля" />
+          <img class="profile__avatar" src="" alt="Аватар профиля" />
           <div class="profile__avatar-edit"></div>
         </div>
         <div class="profile__info">
           <div class="profile__text">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <p class="profile__subtitle">Исследователь океана</p>
+            <h1 class="profile__title"></h1>
+            <p class="profile__subtitle"></p>
           </div>
           <button class="profile__edit-button" type="button"></button>
         </div>
@@ -50,9 +50,10 @@
             <input
               class="popup__input"
               type="text"
+              id="profileName"
               name="profileName"
               placeholder="Имя"
-              value="Жак-Ив Кусто"
+              value=""
               autocomplete="off"
               required
               minlength="2"
@@ -66,7 +67,7 @@
               type="text"
               name="profileAboutSelf"
               placeholder="О себе"
-              value="Исследователь океана"
+              value=""
               autocomplete="off"
               required
               minlength="2"
@@ -136,7 +137,7 @@
     <!-- elementTemplate -->
     <template id="elementTemplate">
       <li class="element">
-        <button class="element__delete-button"></button>
+        <button class="element__delete-button element__delete-button_off"></button>
         <img class="element__image" src="#" alt="" />
         <div class="element__text">
           <h2 class="element__title"></h2>
