--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
       </div>
     </div>
 
-    <!-- /popup-image -->
+    <!-- popup-image -->
     <div class="popup popup_place-image" id="popupImage">
       <div class="popup__container-image">
         <figure class="popup__figure">
@@ -131,6 +131,15 @@
           </div>
           <button class="popup__button-save" type="submit" id="avatarSubmitButton">Сохранить</button>
         </form>
+      </div>
+    </div>
+
+    <!-- popup-delete -->
+    <div class="popup" id="popupDelete">
+      <div class="popup__container popup__container_type_delete">
+        <button class="popup__button-close" type="button"></button>
+        <h3 class="popup__title popup__title_type_delete">Вы уверены?</h3>
+        <button class="popup__button-save" type="button" id="deleteCardConfirm">Да</button>
       </div>
     </div>
 
