--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
     <!-- elementTemplate -->
     <template id="elementTemplate">
       <li class="element">
-        <button class="element__delete-button element__delete-button_off"></button>
+        <button class="element__delete-button element__delete-button_off" disabled></button>
         <img class="element__image" src="#" alt="" />
         <div class="element__text">
           <h2 class="element__title"></h2>
