fix css avatar:hover

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,12 @@
     <main>
       <!-- profile -->
       <section class="profile">
+
         <div class="profile__avatar-container">
+          <button class="profile__avatar-edit" type="button"></button>
           <img class="profile__avatar" src="" alt="Аватар профиля" />
-          <div class="profile__avatar-edit"></div>
         </div>
+        
         <div class="profile__info">
           <div class="profile__text">
             <h1 class="profile__title"></h1>
