--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mesto</title>
+    <link rel="icon" href="<%=require('./images/horse-favi.svg')%>" />
   </head>
   <body class="page">
     <!-- header -->
@@ -20,7 +21,7 @@
           <button class="profile__avatar-edit" type="button"></button>
           <img class="profile__avatar" src="" alt="Аватар профиля" />
         </div>
-        
+
         <div class="profile__info">
           <div class="profile__text">
             <h1 class="profile__title"></h1>
