--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body class="page">
     <!-- header -->
     <header class="header">
+      <h1 class="header__hidden-title">Проект Mesto</h1>
       <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Mesto-Russia" />
     </header>
 
@@ -18,11 +19,11 @@
       <section class="profile">
         <div class="profile__avatar-container">
           <button class="profile__avatar-edit" type="button"></button>
-          <img class="profile__avatar" src="" alt="Аватар профиля" />
+          <img class="profile__avatar" src="<%=require('./images/avatar-empty.png')%>" alt="Аватар профиля" />
         </div>
         <div class="profile__info">
           <div class="profile__text">
-            <h1 class="profile__title"></h1>
+            <h2 class="profile__title">Пользователь</h2>
             <p class="profile__subtitle"></p>
           </div>
           <button class="profile__edit-button" type="button"></button>
